# pallas-plugin-bot-status

./: AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
src/pallas_plugin_bot_status/: __init__.py  bot_monitor.py  config.py  list_mode.py  mail_notifier.py  shard_count.py  utils.py
