[project]
name = "pallas-plugin-bot-status"
version = "4.0.6"
description = "Pallas-Bot 官方扩展：牛牛在吗、报数与离线邮件通知。"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12,<4.0"
dependencies = [
    "aiosmtplib>=5.0.0",
    "httpx[socks]>=0.28.1",
    "nonebot2>=2.4.0",
    "nonebot-adapter-onebot>=2.4.6",
    "nonebot-plugin-apscheduler>=0.5.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pallas_plugin_bot_status"]

[tool.nonebot]
plugin_dirs = []
builtin_plugins = []

[tool.nonebot.plugins]
"@local" = []
pallas-plugin-bot-status = ["pallas_plugin_bot_status"]

[tool.nonebot.adapters]
"@local" = []
nonebot-adapter-onebot = [{ name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }]
